Fix contrast for active buffer

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -380,6 +380,14 @@ li.buffer.channel a span:last-of-type:before {
     font-weight: bold;
 }
 
+li.buffer.channel.active a span:last-of-type:before {
+    color: #444;
+}
+
+li.buffer.channel.active a:hover span:last-of-type:before {
+    color: #222;
+}
+
 li.buffer.indent.private a {
     padding-left: 22px;
 }
